[gd_scene load_steps=16 format=2]

[ext_resource path="res://Gun.tscn" type="PackedScene" id=1]
[ext_resource path="res://data/characters/player/Player.gd" type="Script" id=2]
[ext_resource path="res://data/characters/player/eye_L.png" type="Texture" id=3]
[ext_resource path="res://data/characters/player/eye_R.png" type="Texture" id=4]
[ext_resource path="res://data/characters/player/body.png" type="Texture" id=5]
[ext_resource path="res://data/characters/player/mouth.png" type="Texture" id=6]

[sub_resource type="CapsuleShape2D" id=5]
radius = 66.0
height = 0.0

[sub_resource type="CircleShape2D" id=10]
radius = 160.0

[sub_resource type="Animation" id=3]
length = 0.001

[sub_resource type="Animation" id=1]
resource_name = "idle"
length = 2.0
loop = true

[sub_resource type="Animation" id=4]
resource_name = "walk"

[sub_resource type="CircleShape2D" id=11]
radius = 62.0322

[sub_resource type="DynamicFont" id=8]

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.211765, 0.737255, 0.168627, 1 )
skew = Vector2( 0.4, 0 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0, 0, 0, 1 )
skew = Vector2( 0.4, 0 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
shadow_size = 2

[node name="Player" type="KinematicBody2D" groups=["Player"]]
scale = Vector2( 0.5, 0.5 )
z_index = 1
collision_mask = 0
collision/safe_margin = 1.0
script = ExtResource( 2 )

[node name="Body" type="Sprite" parent="."]
position = Vector2( 0, -56 )
texture = ExtResource( 5 )

[node name="eye_L" type="Sprite" parent="Body"]
position = Vector2( -22, -6 )
texture = ExtResource( 3 )

[node name="eye_R" type="Sprite" parent="Body"]
position = Vector2( 18, -14 )
texture = ExtResource( 4 )

[node name="mouth" type="Sprite" parent="Body"]
position = Vector2( 2, 36 )
texture = ExtResource( 6 )

[node name="Gun" parent="." instance=ExtResource( 1 )]
position = Vector2( -2, -56 )

[node name="HurtArea" type="Area2D" parent="."]
unique_name_in_owner = true
position = Vector2( 0, -56 )
collision_layer = 0
collision_mask = 16
monitorable = false

[node name="MeleeCollider" type="CollisionShape2D" parent="HurtArea"]
modulate = Color( 0.890196, 0.913725, 0.133333, 1 )
shape = SubResource( 5 )

[node name="CollectArea" type="Area2D" parent="."]
position = Vector2( 0, -56 )
collision_mask = 0
monitoring = false

[node name="CollectCollider" type="CollisionShape2D" parent="CollectArea"]
shape = SubResource( 10 )

[node name="AnimPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
anims/RESET = SubResource( 3 )
anims/idle = SubResource( 1 )
anims/walk = SubResource( 4 )

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2( 0, -56 )
shape = SubResource( 11 )

[node name="HealthBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
margin_left = -88.0
margin_top = -162.0
margin_right = 88.0
margin_bottom = -152.0
custom_fonts/font = SubResource( 8 )
custom_styles/fg = SubResource( 7 )
custom_styles/bg = SubResource( 9 )
value = 44.0
